fixed delivery/register page input validation, now user cannot change input data when popup is visible, added class exist to wrong password input

--- a/src/styles/accPage.scss
+++ b/src/styles/accPage.scss
@@ -135,6 +135,9 @@
             &.wrong {
                 animation: shake 1s;
             }
+            &.exist {
+                border: 2px solid orange !important;
+            }
         }
         input.email-used {
             border: 2px solid orange !important;
